@@ -1,7 +1,7 @@
 class ComponentsController < ApplicationController
   def index
     component_name = params[:component].gsub("::", "_").underscore
-    render :inline => "<%= netzke :#{component_name}, :class_name => '#{params[:component]}' %>", :layout => true
+    render :inline => "<%= netzke :#{component_name}, :class_name => '#{params[:component]}', :height => 400 %>", :layout => true
   end
 
   # For panel_with_autoload
